# ConcurrentAndParallel

cuda/: CMakeLists.txt  README.md  Ray.h  hitable.h  hitable_list.h  kernal.cu  main.cpp  makefile  sphere.h  vec3.h
cuda/raycasting/: raycasting.sln
cuda/raycasting/raycasting/: raycasting.cpp  raycasting.vcxproj  raycasting_cuda.cu
python/: .gitignore  README.md  main.py  particles.py  requirements.txt
python/opengl/: __init__.py  caster.py  colour.py  main.py  ray.py
python/particle/: __init__.py  mode.py  movement.py  multi_threaded_particles.py
python/particles/: single_threaded_particles.py
